# mj-tracker-2027

./: .gitignore  README.md  environment.yml  main.py  main_animation.py  main_approval.py  main_export.py  main_ipsos.py  mj_dataset.csv  pyproject.toml  sankey_plot.py  test_plot_debug.py  test_smp_integration.py
.github/workflows/: deploy_smp_pages.yml  release.yml
mjtracker/: README.md  __init__.py  batch_figure.py  batch_plots.py  batch_plots_smp.py  color_utils.py  constants.py  export_compact_json.py  interface_mj.py  load_surveys.py  main_animation.py  plot_utils.py  plots.py  plots_smp_to_be_maintained.py  plots_to_be_maintained.py  plots_v2.py  smp_data.py  standardisation.csv  survey_interface.py  surveys_inferface.py
mjtracker/core/: __init__.py  smp_data.py  survey_interface.py  surveys_interface.py
mjtracker/export/: __init__.py  export_compact_json.py
mjtracker/legacy/: __init__.py  plots_smp_to_be_maintained.py  plots_to_be_maintained.py
mjtracker/libs/: majority_judgment_2.py
mjtracker/misc/: enums.py
mjtracker/plotting/: __init__.py  batch_figure.py  batch_plots.py  batch_plots_smp.py  plot_utils.py  plots.py  plots_smp.py  plots_smp_intentions.py  plots_v2.py
mjtracker/utils/: __init__.py  interface_mj.py  utils.py
scripts/: README.md  main_approval.py  main_filtering.py  main_ipsos.py  main_left.py  main_smp.py  sankey_plot.py  sankey_v2.py
tests/: test_smpdata_refactored.py  test_survey_interface.py  tests_mj_libs.py
website/: index.html
