[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '^external/'

[tool.poetry]
name = "mjtracker"
version = "0.1.0"
description = "A tracker for election polls using majority judgment"
authors = ["Pierre Puchaud <puchaud.pierre@gmail.com>", "Rémy Poulain <mail@mail.com>", "Samuel Ballé <mail@mail.com>", "Pierre-Louis Guhur <pierrelouisguhur@gmail.com>"]

# This is the corrected section
packages = [
    { include = "mjtracker" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "~1.4.1" # Pandas 1.4.x requires an older numpy version for binary compatibility.
numpy = ">=1.21.0, <1.24.0"
plotly = "~5.6.0"
seaborn = "~0.11.2"
kaleido = "0.2.1"
typed-argument-parser = "~1.7.2"
requests = "~2.27.1"
