[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '^external/'

[tool.poetry]
name = "mjtracker"
version = "0.1.0"
description = "A tracker for election polls using majority judgment"
authors = ["Pierre Puchaud <puchaud.pierre@gmail.com>", "Rémy Poulain <mail@mail.com>", "Samuel Ballé <mail@mail.com>", "Pierre-Louis Guhur <pierrelouisguhur@gmail.com>"]

# This is the corrected section
packages = [
    { include = "mjtracker" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
plotly = "^5.15.0"
seaborn = "^0.13.0"
typed-argument-parser = "^1.8.0"
requests = "^2.31.0"
