[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '^external/'

[tool.poetry]
name = "mjtracker"
version = "0.1.0"
description = "A tracker for election polls using majority judgment"
authors = ["Pierre Puchaud <puchaud.pierre@gmail.com>", "Rémy Poulain <mail@mail.com>", "Samuel Ballé <mail@mail.com>", "Pierre-Louis Guhur <pierrelouisguhur@gmail.com>"]
packages = [
    { include = "mjtracker" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"

# Updated to match the versions from your conda list
pandas = "^2.3.0"
plotly = "^6.3.0"
seaborn = "^0.13.0"
typed-argument-parser = "^1.10.0"
requests = "^2.32.0"
